// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webhooks > C# snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "empty-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 83,
      "start": 45,
    },
    "verification": {
      "end": 43,
      "start": 40,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 103,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "empty-default-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 83,
      "start": 45,
    },
    "verification": {
      "end": 43,
      "start": 40,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 106,
      },
    },
    "server": {
      "name": {
        "line": 103,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "quirky-escaping-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 83,
      "start": 45,
    },
    "verification": {
      "end": 43,
      "start": 40,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 109,
      },
      "basic-auth": {
        "line": 110,
      },
      "normal_security_var": {
        "line": 111,
      },
    },
    "server": {
      "*port": {
        "line": 104,
      },
      "2name": {
        "line": 103,
      },
      "normal_server_var": {
        "line": 106,
      },
      "p*o?r*t": {
        "line": 105,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-and-server-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 83,
      "start": 45,
    },
    "verification": {
      "end": 43,
      "start": 40,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 108,
      },
      "petstore_auth": {
        "line": 107,
      },
    },
    "server": {
      "name": {
        "line": 103,
      },
      "port": {
        "line": 104,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-types-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 83,
      "start": 45,
    },
    "verification": {
      "end": 43,
      "start": 40,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 103,
      },
      "http_basic": {
        "line": 104,
      },
      "http_bearer": {
        "line": 105,
      },
      "oauth2": {
        "line": 106,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 83,
      "start": 45,
    },
    "verification": {
      "end": 43,
      "start": 40,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 104,
      },
      "petstore_auth": {
        "line": 103,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "server-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 83,
      "start": 45,
    },
    "verification": {
      "end": 43,
      "start": 40,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 107,
      },
    },
    "server": {
      "name": {
        "line": 103,
      },
      "port": {
        "line": 104,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > request should match fixture for "empty" 1`] = `
{
  "sections": {
    "payload": {
      "end": 62,
      "start": 42,
    },
    "verification": {
      "end": 40,
      "start": 37,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 82,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > request should match fixture for "empty-default" 1`] = `
{
  "sections": {
    "payload": {
      "end": 62,
      "start": 42,
    },
    "verification": {
      "end": 40,
      "start": 37,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 85,
      },
    },
    "server": {
      "name": {
        "line": 82,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > request should match fixture for "quirky-escaping" 1`] = `
{
  "sections": {
    "payload": {
      "end": 62,
      "start": 42,
    },
    "verification": {
      "end": 40,
      "start": 37,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 88,
      },
      "basic-auth": {
        "line": 89,
      },
      "normal_security_var": {
        "line": 90,
      },
    },
    "server": {
      "*port": {
        "line": 83,
      },
      "2name": {
        "line": 82,
      },
      "normal_server_var": {
        "line": 85,
      },
      "p*o?r*t": {
        "line": 84,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > request should match fixture for "security-and-server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 62,
      "start": 42,
    },
    "verification": {
      "end": 40,
      "start": 37,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 87,
      },
      "petstore_auth": {
        "line": 86,
      },
    },
    "server": {
      "name": {
        "line": 82,
      },
      "port": {
        "line": 83,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > request should match fixture for "security-types" 1`] = `
{
  "sections": {
    "payload": {
      "end": 62,
      "start": 42,
    },
    "verification": {
      "end": 40,
      "start": 37,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 82,
      },
      "http_basic": {
        "line": 83,
      },
      "http_bearer": {
        "line": 84,
      },
      "oauth2": {
        "line": 85,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > request should match fixture for "security-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 62,
      "start": 42,
    },
    "verification": {
      "end": 40,
      "start": 37,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 83,
      },
      "petstore_auth": {
        "line": 82,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > aws > request should match fixture for "server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 62,
      "start": 42,
    },
    "verification": {
      "end": 40,
      "start": 37,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 86,
      },
    },
    "server": {
      "name": {
        "line": 82,
      },
      "port": {
        "line": 83,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > dotnet6 > request should match fixture for "empty" 1`] = `
{
  "sections": {
    "payload": {
      "end": 33,
      "start": 27,
    },
    "verification": {
      "end": 25,
      "start": 9,
    },
  },
  "variables": {},
}
`;

exports[`webhooks > C# snippet generation > dotnet6 > request should match fixture for "empty-default" 1`] = `
{
  "sections": {
    "payload": {
      "end": 43,
      "start": 27,
    },
    "verification": {
      "end": 25,
      "start": 9,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 40,
      },
    },
    "server": {
      "name": {
        "line": 33,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > dotnet6 > request should match fixture for "quirky-escaping" 1`] = `
{
  "sections": {
    "payload": {
      "end": 58,
      "start": 27,
    },
    "verification": {
      "end": 25,
      "start": 9,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 43,
      },
      "basic-auth": {
        "line": 47,
      },
      "normal_security_var": {
        "line": 53,
      },
    },
    "server": {
      "*port": {
        "line": 34,
      },
      "2name": {
        "line": 33,
      },
      "normal_server_var": {
        "line": 36,
      },
      "p*o?r*t": {
        "line": 35,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > dotnet6 > request should match fixture for "security-and-server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 50,
      "start": 27,
    },
    "verification": {
      "end": 25,
      "start": 9,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 45,
      },
      "petstore_auth": {
        "line": 41,
      },
    },
    "server": {
      "name": {
        "line": 33,
      },
      "port": {
        "line": 34,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > dotnet6 > request should match fixture for "security-types" 1`] = `
{
  "sections": {
    "payload": {
      "end": 56,
      "start": 27,
    },
    "verification": {
      "end": 25,
      "start": 9,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 38,
      },
      "http_basic": {
        "line": 42,
      },
      "http_bearer": {
        "line": 49,
      },
      "oauth2": {
        "line": 53,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > dotnet6 > request should match fixture for "security-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 46,
      "start": 27,
    },
    "verification": {
      "end": 25,
      "start": 9,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 41,
      },
      "petstore_auth": {
        "line": 37,
      },
    },
  },
}
`;

exports[`webhooks > C# snippet generation > dotnet6 > request should match fixture for "server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 35,
      "start": 27,
    },
    "verification": {
      "end": 25,
      "start": 9,
    },
  },
  "variables": {
    "server": {
      "name": {
        "line": 33,
      },
      "port": {
        "line": 34,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "empty-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 55,
      "start": 24,
    },
    "verification": {
      "end": 22,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 66,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "empty-default-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 55,
      "start": 24,
    },
    "verification": {
      "end": 22,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 69,
      },
    },
    "server": {
      "name": {
        "line": 66,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "quirky-escaping-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 55,
      "start": 24,
    },
    "verification": {
      "end": 22,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 72,
      },
      "basic-auth": {
        "line": 73,
      },
      "normal_security_var": {
        "line": 74,
      },
    },
    "server": {
      "*port": {
        "line": 67,
      },
      "2name": {
        "line": 66,
      },
      "normal_server_var": {
        "line": 69,
      },
      "p*o?r*t": {
        "line": 68,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-and-server-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 55,
      "start": 24,
    },
    "verification": {
      "end": 22,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 71,
      },
      "petstore_auth": {
        "line": 70,
      },
    },
    "server": {
      "name": {
        "line": 66,
      },
      "port": {
        "line": 67,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-types-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 55,
      "start": 24,
    },
    "verification": {
      "end": 22,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 66,
      },
      "http_basic": {
        "line": 67,
      },
      "http_bearer": {
        "line": 68,
      },
      "oauth2": {
        "line": 69,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 55,
      "start": 24,
    },
    "verification": {
      "end": 22,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 67,
      },
      "petstore_auth": {
        "line": 66,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "server-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 55,
      "start": 24,
    },
    "verification": {
      "end": 22,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 70,
      },
    },
    "server": {
      "name": {
        "line": 66,
      },
      "port": {
        "line": 67,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > request should match fixture for "empty" 1`] = `
{
  "sections": {
    "payload": {
      "end": 28,
      "start": 16,
    },
    "verification": {
      "end": 14,
      "start": 11,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > request should match fixture for "empty-default" 1`] = `
{
  "sections": {
    "payload": {
      "end": 28,
      "start": 16,
    },
    "verification": {
      "end": 14,
      "start": 11,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 42,
      },
    },
    "server": {
      "name": {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > request should match fixture for "quirky-escaping" 1`] = `
{
  "sections": {
    "payload": {
      "end": 28,
      "start": 16,
    },
    "verification": {
      "end": 14,
      "start": 11,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 45,
      },
      "basic-auth": {
        "line": 46,
      },
      "normal_security_var": {
        "line": 47,
      },
    },
    "server": {
      "*port": {
        "line": 40,
      },
      "2name": {
        "line": 39,
      },
      "normal_server_var": {
        "line": 42,
      },
      "p*o?r*t": {
        "line": 41,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > request should match fixture for "security-and-server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 28,
      "start": 16,
    },
    "verification": {
      "end": 14,
      "start": 11,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 44,
      },
      "petstore_auth": {
        "line": 43,
      },
    },
    "server": {
      "name": {
        "line": 39,
      },
      "port": {
        "line": 40,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > request should match fixture for "security-types" 1`] = `
{
  "sections": {
    "payload": {
      "end": 28,
      "start": 16,
    },
    "verification": {
      "end": 14,
      "start": 11,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 39,
      },
      "http_basic": {
        "line": 40,
      },
      "http_bearer": {
        "line": 41,
      },
      "oauth2": {
        "line": 42,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > request should match fixture for "security-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 28,
      "start": 16,
    },
    "verification": {
      "end": 14,
      "start": 11,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 40,
      },
      "petstore_auth": {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > aws > request should match fixture for "server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 28,
      "start": 16,
    },
    "verification": {
      "end": 14,
      "start": 11,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 43,
      },
    },
    "server": {
      "name": {
        "line": 39,
      },
      "port": {
        "line": 40,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > express > request should match fixture for "empty" 1`] = `
{
  "sections": {
    "payload": {
      "end": 24,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 10,
    },
  },
  "variables": {},
}
`;

exports[`webhooks > Node.js snippet generation > express > request should match fixture for "empty-default" 1`] = `
{
  "sections": {
    "payload": {
      "end": 32,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 10,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 29,
      },
    },
    "server": {
      "name": {
        "line": 24,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > express > request should match fixture for "quirky-escaping" 1`] = `
{
  "sections": {
    "payload": {
      "end": 45,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 10,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 32,
      },
      "basic-auth": {
        "line": 35,
      },
      "normal_security_var": {
        "line": 40,
      },
    },
    "server": {
      "*port": {
        "line": 25,
      },
      "2name": {
        "line": 24,
      },
      "normal_server_var": {
        "line": 27,
      },
      "p*o?r*t": {
        "line": 26,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > express > request should match fixture for "security-and-server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 38,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 10,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 33,
      },
      "petstore_auth": {
        "line": 30,
      },
    },
    "server": {
      "name": {
        "line": 24,
      },
      "port": {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > express > request should match fixture for "security-types" 1`] = `
{
  "sections": {
    "payload": {
      "end": 42,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 10,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 27,
      },
      "http_basic": {
        "line": 30,
      },
      "http_bearer": {
        "line": 36,
      },
      "oauth2": {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > express > request should match fixture for "security-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 34,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 10,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 29,
      },
      "petstore_auth": {
        "line": 26,
      },
    },
  },
}
`;

exports[`webhooks > Node.js snippet generation > express > request should match fixture for "server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 26,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 10,
    },
  },
  "variables": {
    "server": {
      "name": {
        "line": 24,
      },
      "port": {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks > PHP snippet generation > laravel > request should match fixture for "empty" 1`] = `
{
  "sections": {
    "payload": {
      "end": 24,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 8,
    },
  },
  "variables": {},
}
`;

exports[`webhooks > PHP snippet generation > laravel > request should match fixture for "empty-default" 1`] = `
{
  "sections": {
    "payload": {
      "end": 32,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 8,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 29,
      },
    },
    "server": {
      "name": {
        "line": 24,
      },
    },
  },
}
`;

exports[`webhooks > PHP snippet generation > laravel > request should match fixture for "quirky-escaping" 1`] = `
{
  "sections": {
    "payload": {
      "end": 45,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 8,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 32,
      },
      "basic-auth": {
        "line": 35,
      },
      "normal_security_var": {
        "line": 40,
      },
    },
    "server": {
      "*port": {
        "line": 25,
      },
      "2name": {
        "line": 24,
      },
      "normal_server_var": {
        "line": 27,
      },
      "p*o?r*t": {
        "line": 26,
      },
    },
  },
}
`;

exports[`webhooks > PHP snippet generation > laravel > request should match fixture for "security-and-server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 38,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 8,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 33,
      },
      "petstore_auth": {
        "line": 30,
      },
    },
    "server": {
      "name": {
        "line": 24,
      },
      "port": {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks > PHP snippet generation > laravel > request should match fixture for "security-types" 1`] = `
{
  "sections": {
    "payload": {
      "end": 42,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 8,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 27,
      },
      "http_basic": {
        "line": 30,
      },
      "http_bearer": {
        "line": 36,
      },
      "oauth2": {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks > PHP snippet generation > laravel > request should match fixture for "security-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 34,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 8,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 29,
      },
      "petstore_auth": {
        "line": 26,
      },
    },
  },
}
`;

exports[`webhooks > PHP snippet generation > laravel > request should match fixture for "server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 26,
      "start": 20,
    },
    "verification": {
      "end": 18,
      "start": 8,
    },
  },
  "variables": {
    "server": {
      "name": {
        "line": 24,
      },
      "port": {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "empty-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 47,
      "start": 25,
    },
    "verification": {
      "end": 23,
      "start": 20,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 58,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "empty-default-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 47,
      "start": 25,
    },
    "verification": {
      "end": 23,
      "start": 20,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 61,
      },
    },
    "server": {
      "name": {
        "line": 58,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "quirky-escaping-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 47,
      "start": 25,
    },
    "verification": {
      "end": 23,
      "start": 20,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 64,
      },
      "basic-auth": {
        "line": 65,
      },
      "normal_security_var": {
        "line": 66,
      },
    },
    "server": {
      "*port": {
        "line": 59,
      },
      "2name": {
        "line": 58,
      },
      "normal_server_var": {
        "line": 61,
      },
      "p*o?r*t": {
        "line": 60,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-and-server-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 47,
      "start": 25,
    },
    "verification": {
      "end": 23,
      "start": 20,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 63,
      },
      "petstore_auth": {
        "line": 62,
      },
    },
    "server": {
      "name": {
        "line": 58,
      },
      "port": {
        "line": 59,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-types-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 47,
      "start": 25,
    },
    "verification": {
      "end": 23,
      "start": 20,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 58,
      },
      "http_basic": {
        "line": 59,
      },
      "http_bearer": {
        "line": 60,
      },
      "oauth2": {
        "line": 61,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 47,
      "start": 25,
    },
    "verification": {
      "end": 23,
      "start": 20,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 59,
      },
      "petstore_auth": {
        "line": 58,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "server-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 47,
      "start": 25,
    },
    "verification": {
      "end": 23,
      "start": 20,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 62,
      },
    },
    "server": {
      "name": {
        "line": 58,
      },
      "port": {
        "line": 59,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > request should match fixture for "empty" 1`] = `
{
  "sections": {
    "payload": {
      "end": 32,
      "start": 22,
    },
    "verification": {
      "end": 20,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 43,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > request should match fixture for "empty-default" 1`] = `
{
  "sections": {
    "payload": {
      "end": 32,
      "start": 22,
    },
    "verification": {
      "end": 20,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 46,
      },
    },
    "server": {
      "name": {
        "line": 43,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > request should match fixture for "quirky-escaping" 1`] = `
{
  "sections": {
    "payload": {
      "end": 32,
      "start": 22,
    },
    "verification": {
      "end": 20,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 49,
      },
      "basic-auth": {
        "line": 50,
      },
      "normal_security_var": {
        "line": 51,
      },
    },
    "server": {
      "*port": {
        "line": 44,
      },
      "2name": {
        "line": 43,
      },
      "normal_server_var": {
        "line": 46,
      },
      "p*o?r*t": {
        "line": 45,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > request should match fixture for "security-and-server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 32,
      "start": 22,
    },
    "verification": {
      "end": 20,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 48,
      },
      "petstore_auth": {
        "line": 47,
      },
    },
    "server": {
      "name": {
        "line": 43,
      },
      "port": {
        "line": 44,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > request should match fixture for "security-types" 1`] = `
{
  "sections": {
    "payload": {
      "end": 32,
      "start": 22,
    },
    "verification": {
      "end": 20,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 43,
      },
      "http_basic": {
        "line": 44,
      },
      "http_bearer": {
        "line": 45,
      },
      "oauth2": {
        "line": 46,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > request should match fixture for "security-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 32,
      "start": 22,
    },
    "verification": {
      "end": 20,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 44,
      },
      "petstore_auth": {
        "line": 43,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > aws > request should match fixture for "server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 32,
      "start": 22,
    },
    "verification": {
      "end": 20,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 47,
      },
    },
    "server": {
      "name": {
        "line": 43,
      },
      "port": {
        "line": 44,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > flask > request should match fixture for "empty" 1`] = `
{
  "sections": {
    "payload": {
      "end": 39,
      "start": 31,
    },
    "verification": {
      "end": 29,
      "start": 19,
    },
  },
  "variables": {},
}
`;

exports[`webhooks > Python snippet generation > flask > request should match fixture for "empty-default" 1`] = `
{
  "sections": {
    "payload": {
      "end": 47,
      "start": 31,
    },
    "verification": {
      "end": 29,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 41,
      },
    },
    "server": {
      "name": {
        "line": 36,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > flask > request should match fixture for "quirky-escaping" 1`] = `
{
  "sections": {
    "payload": {
      "end": 60,
      "start": 31,
    },
    "verification": {
      "end": 29,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 44,
      },
      "basic-auth": {
        "line": 47,
      },
      "normal_security_var": {
        "line": 52,
      },
    },
    "server": {
      "*port": {
        "line": 37,
      },
      "2name": {
        "line": 36,
      },
      "normal_server_var": {
        "line": 39,
      },
      "p*o?r*t": {
        "line": 38,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > flask > request should match fixture for "security-and-server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 53,
      "start": 31,
    },
    "verification": {
      "end": 29,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 45,
      },
      "petstore_auth": {
        "line": 42,
      },
    },
    "server": {
      "name": {
        "line": 36,
      },
      "port": {
        "line": 37,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > flask > request should match fixture for "security-types" 1`] = `
{
  "sections": {
    "payload": {
      "end": 57,
      "start": 31,
    },
    "verification": {
      "end": 29,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 39,
      },
      "http_basic": {
        "line": 42,
      },
      "http_bearer": {
        "line": 48,
      },
      "oauth2": {
        "line": 51,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > flask > request should match fixture for "security-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 49,
      "start": 31,
    },
    "verification": {
      "end": 29,
      "start": 19,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 41,
      },
      "petstore_auth": {
        "line": 38,
      },
    },
  },
}
`;

exports[`webhooks > Python snippet generation > flask > request should match fixture for "server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 41,
      "start": 31,
    },
    "verification": {
      "end": 29,
      "start": 19,
    },
  },
  "variables": {
    "server": {
      "name": {
        "line": 36,
      },
      "port": {
        "line": 37,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "empty-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 50,
      "start": 21,
    },
    "verification": {
      "end": 19,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 62,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "empty-default-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 50,
      "start": 21,
    },
    "verification": {
      "end": 19,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 65,
      },
    },
    "server": {
      "name": {
        "line": 62,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "quirky-escaping-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 50,
      "start": 21,
    },
    "verification": {
      "end": 19,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 68,
      },
      "basic-auth": {
        "line": 69,
      },
      "normal_security_var": {
        "line": 70,
      },
    },
    "server": {
      "*port": {
        "line": 63,
      },
      "2name": {
        "line": 62,
      },
      "normal_server_var": {
        "line": 65,
      },
      "p*o?r*t": {
        "line": 64,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-and-server-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 50,
      "start": 21,
    },
    "verification": {
      "end": 19,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 67,
      },
      "petstore_auth": {
        "line": 66,
      },
    },
    "server": {
      "name": {
        "line": 62,
      },
      "port": {
        "line": 63,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-types-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 50,
      "start": 21,
    },
    "verification": {
      "end": 19,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 62,
      },
      "http_basic": {
        "line": 63,
      },
      "http_bearer": {
        "line": 64,
      },
      "oauth2": {
        "line": 65,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "security-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 50,
      "start": 21,
    },
    "verification": {
      "end": 19,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 63,
      },
      "petstore_auth": {
        "line": 62,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > AWS snippet generation with automatic creation of new API keys > aws request should match fixture for "server-variables-create" 1`] = `
{
  "sections": {
    "payload": {
      "end": 50,
      "start": 21,
    },
    "verification": {
      "end": 19,
      "start": 17,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 66,
      },
    },
    "server": {
      "name": {
        "line": 62,
      },
      "port": {
        "line": 63,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > request should match fixture for "empty" 1`] = `
{
  "sections": {
    "payload": {
      "end": 33,
      "start": 18,
    },
    "verification": {
      "end": 16,
      "start": 14,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 45,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > request should match fixture for "empty-default" 1`] = `
{
  "sections": {
    "payload": {
      "end": 33,
      "start": 18,
    },
    "verification": {
      "end": 16,
      "start": 14,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 48,
      },
    },
    "server": {
      "name": {
        "line": 45,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > request should match fixture for "quirky-escaping" 1`] = `
{
  "sections": {
    "payload": {
      "end": 33,
      "start": 18,
    },
    "verification": {
      "end": 16,
      "start": 14,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 51,
      },
      "basic-auth": {
        "line": 52,
      },
      "normal_security_var": {
        "line": 53,
      },
    },
    "server": {
      "*port": {
        "line": 46,
      },
      "2name": {
        "line": 45,
      },
      "normal_server_var": {
        "line": 48,
      },
      "p*o?r*t": {
        "line": 47,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > request should match fixture for "security-and-server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 33,
      "start": 18,
    },
    "verification": {
      "end": 16,
      "start": 14,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 50,
      },
      "petstore_auth": {
        "line": 49,
      },
    },
    "server": {
      "name": {
        "line": 45,
      },
      "port": {
        "line": 46,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > request should match fixture for "security-types" 1`] = `
{
  "sections": {
    "payload": {
      "end": 33,
      "start": 18,
    },
    "verification": {
      "end": 16,
      "start": 14,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 45,
      },
      "http_basic": {
        "line": 46,
      },
      "http_bearer": {
        "line": 47,
      },
      "oauth2": {
        "line": 48,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > request should match fixture for "security-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 33,
      "start": 18,
    },
    "verification": {
      "end": 16,
      "start": 14,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 46,
      },
      "petstore_auth": {
        "line": 45,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > aws > request should match fixture for "server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 33,
      "start": 18,
    },
    "verification": {
      "end": 16,
      "start": 14,
    },
  },
  "variables": {
    "security": {
      "apiKey": {
        "line": 49,
      },
    },
    "server": {
      "name": {
        "line": 45,
      },
      "port": {
        "line": 46,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > rails > request should match fixture for "empty" 1`] = `
{
  "sections": {
    "payload": {
      "end": 30,
      "start": 26,
    },
    "verification": {
      "end": 24,
      "start": 13,
    },
  },
  "variables": {},
}
`;

exports[`webhooks > Ruby snippet generation > rails > request should match fixture for "empty-default" 1`] = `
{
  "sections": {
    "payload": {
      "end": 38,
      "start": 26,
    },
    "verification": {
      "end": 24,
      "start": 13,
    },
  },
  "variables": {
    "security": {
      "petstore_auth": {
        "line": 35,
      },
    },
    "server": {
      "name": {
        "line": 30,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > rails > request should match fixture for "quirky-escaping" 1`] = `
{
  "sections": {
    "payload": {
      "end": 51,
      "start": 26,
    },
    "verification": {
      "end": 24,
      "start": 13,
    },
  },
  "variables": {
    "security": {
      "\\"petstore\\" auth": {
        "line": 38,
      },
      "basic-auth": {
        "line": 41,
      },
      "normal_security_var": {
        "line": 46,
      },
    },
    "server": {
      "*port": {
        "line": 31,
      },
      "2name": {
        "line": 30,
      },
      "normal_server_var": {
        "line": 33,
      },
      "p*o?r*t": {
        "line": 32,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > rails > request should match fixture for "security-and-server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 44,
      "start": 26,
    },
    "verification": {
      "end": 24,
      "start": 13,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 39,
      },
      "petstore_auth": {
        "line": 36,
      },
    },
    "server": {
      "name": {
        "line": 30,
      },
      "port": {
        "line": 31,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > rails > request should match fixture for "security-types" 1`] = `
{
  "sections": {
    "payload": {
      "end": 48,
      "start": 26,
    },
    "verification": {
      "end": 24,
      "start": 13,
    },
  },
  "variables": {
    "security": {
      "api_key": {
        "line": 33,
      },
      "http_basic": {
        "line": 36,
      },
      "http_bearer": {
        "line": 42,
      },
      "oauth2": {
        "line": 45,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > rails > request should match fixture for "security-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 40,
      "start": 26,
    },
    "verification": {
      "end": 24,
      "start": 13,
    },
  },
  "variables": {
    "security": {
      "basic_auth": {
        "line": 35,
      },
      "petstore_auth": {
        "line": 32,
      },
    },
  },
}
`;

exports[`webhooks > Ruby snippet generation > rails > request should match fixture for "server-variables" 1`] = `
{
  "sections": {
    "payload": {
      "end": 32,
      "start": 26,
    },
    "verification": {
      "end": 24,
      "start": 13,
    },
  },
  "variables": {
    "server": {
      "name": {
        "line": 30,
      },
      "port": {
        "line": 31,
      },
    },
  },
}
`;
